# actix_demo

./: .env  Cargo.toml  Untitled Diagram.drawio
migrations/2021-09-10-154336_users/: up.sql
migrations/2021-10-08-064551_trace_sql/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  models.rs  route.rs  schema.rs
src/controllers/: trace.rs
src/helpers/: utils.rs
src/models/: mod.rs  trace_sql_code.rs  trace_sql_files.rs  trace_sqls.rs  users.rs
src/services/: mod.rs  trace.rs  users.rs  users_r2d2.rs
