[package]
name = "hello-actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
serde = "1.0.130"
serde_json = "1.0.68"
validator = { version = "0.14.0", features = ["derive"] }
env_logger = "0.9.0"